backend/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    BREAK
    CLOSED_COMMENT
    COMMENT
    DOUBLE_QUOTE
    IN
    NOT
    OPEN_COMMENT
    OR
    PERIOD
    QUOTE

Grammar

Rule 0     S' -> main_func
Rule 1     main_func -> MAIN_FUNCTION EXECUTE COLON LBRACE statement_list RBRACE FUNCTION_END
Rule 2     statement_list -> statement statement_list
Rule 3     statement_list -> statement
Rule 4     statement -> expression
Rule 5     statement -> variable_declaration
Rule 6     statement -> variable_assignment
Rule 7     statement -> array_declaration
Rule 8     statement -> array_index_access
Rule 9     statement -> while_statement
Rule 10    statement -> do_while_statement
Rule 11    statement -> for_statement
Rule 12    statement -> if_statement
Rule 13    statement -> print_statement
Rule 14    statement -> empty
Rule 15    if_statement -> IF LPAREN condition_expression RPAREN EXECUTE COLON LBRACE statement_list RBRACE END_IF
Rule 16    if_statement -> IF LPAREN condition_expression RPAREN EXECUTE COLON LBRACE statement_list RBRACE OTHERWISE IF LPAREN condition_expression RPAREN EXECUTE COLON LBRACE statement_list RBRACE END_IF
Rule 17    for_statement -> FOR variable_declaration WITH LIMIT INTEGER_VALUE ASCEND INTEGER_VALUE EXECUTE COLON LBRACE statement_list RBRACE END_FOR
Rule 18    for_statement -> FOR variable_declaration WITH LIMIT INTEGER_VALUE DESCEND INTEGER_VALUE EXECUTE COLON LBRACE statement_list RBRACE END_FOR
Rule 19    print_statement -> PRINT LPAREN STRING_VALUE RPAREN SEMICOLON
Rule 20    print_statement -> PRINT LPAREN STRING_VALUE ADDITION expression RPAREN SEMICOLON
Rule 21    do_while_statement -> EXECUTE COLON LBRACE statement_list RBRACE WHILE LPAREN condition_expression RPAREN
Rule 22    while_statement -> WHILE LPAREN condition_expression RPAREN EXECUTE COLON LBRACE statement_list RBRACE END_WHILE
Rule 23    variable_declaration -> datatype variable_assignment
Rule 24    variable_assignment -> identifier SEMICOLON
Rule 25    variable_assignment -> identifier ASSIGNMENT expression SEMICOLON
Rule 26    array_declaration -> datatype identifier LBRACKET INTEGER_VALUE RBRACKET SEMICOLON
Rule 27    array_declaration -> datatype identifier LBRACKET INTEGER_VALUE RBRACKET ASSIGNMENT LBRACKET array_value_list RBRACKET SEMICOLON
Rule 28    array_value_list -> datavalue COMMA array_value_list
Rule 29    array_value_list -> datavalue
Rule 30    array_index_access -> identifier LBRACKET INTEGER_VALUE RBRACKET
Rule 31    expression -> condition_expression
Rule 32    expression -> expression ADDITION expression
Rule 33    expression -> expression SUBTRACTION expression
Rule 34    expression -> expression MULTIPLICATION expression
Rule 35    expression -> expression DIVISION expression
Rule 36    expression -> expression EXPONENTIAL expression
Rule 37    expression -> expression MODULUS expression
Rule 38    expression -> datavalue INCREMENT
Rule 39    expression -> datavalue DECREMENT
Rule 40    expression -> datavalue
Rule 41    expression -> array_index_access
Rule 42    condition_expression -> expression EQUAL_TO expression
Rule 43    condition_expression -> expression LESS_THAN expression
Rule 44    condition_expression -> expression GREATER_THAN expression
Rule 45    condition_expression -> expression LESS_THAN_OR_EQUAL_TO expression
Rule 46    condition_expression -> expression GREATER_THAN_OR_EQUAL_TO expression
Rule 47    condition_expression -> expression NOT_EQUAL_TO expression
Rule 48    datatype -> FLOAT
Rule 49    datatype -> INTEGER
Rule 50    datatype -> STRING
Rule 51    datatype -> NULL
Rule 52    datatype -> boolean
Rule 53    boolean -> TRUE
Rule 54    boolean -> FALSE
Rule 55    datavalue -> FLOAT_VALUE
Rule 56    datavalue -> INTEGER_VALUE
Rule 57    datavalue -> STRING_VALUE
Rule 58    datavalue -> NULL_VALUE
Rule 59    datavalue -> identifier
Rule 60    identifier -> IDENTIFIER
Rule 61    empty -> <empty>

Terminals, with rules where they appear

ADDITION             : 20 32
AND                  : 
ASCEND               : 17
ASSIGNMENT           : 25 27
BREAK                : 
CLOSED_COMMENT       : 
COLON                : 1 15 16 16 17 18 21 22
COMMA                : 28
COMMENT              : 
DECREMENT            : 39
DESCEND              : 18
DIVISION             : 35
DOUBLE_QUOTE         : 
END_FOR              : 17 18
END_IF               : 15 16
END_WHILE            : 22
EQUAL_TO             : 42
EXECUTE              : 1 15 16 16 17 18 21 22
EXPONENTIAL          : 36
FALSE                : 54
FLOAT                : 48
FLOAT_VALUE          : 55
FOR                  : 17 18
FUNCTION_END         : 1
GREATER_THAN         : 44
GREATER_THAN_OR_EQUAL_TO : 46
IDENTIFIER           : 60
IF                   : 15 16 16
IN                   : 
INCREMENT            : 38
INTEGER              : 49
INTEGER_VALUE        : 17 17 18 18 26 27 30 56
LBRACE               : 1 15 16 16 17 18 21 22
LBRACKET             : 26 27 27 30
LESS_THAN            : 43
LESS_THAN_OR_EQUAL_TO : 45
LIMIT                : 17 18
LPAREN               : 15 16 16 19 20 21 22
MAIN_FUNCTION        : 1
MODULUS              : 37
MULTIPLICATION       : 34
NOT                  : 
NOT_EQUAL_TO         : 47
NULL                 : 51
NULL_VALUE           : 58
OPEN_COMMENT         : 
OR                   : 
OTHERWISE            : 16
PERIOD               : 
PRINT                : 19 20
QUOTE                : 
RBRACE               : 1 15 16 16 17 18 21 22
RBRACKET             : 26 27 27 30
RPAREN               : 15 16 16 19 20 21 22
SEMICOLON            : 19 20 24 25 26 27
STRING               : 50
STRING_VALUE         : 19 20 57
SUBTRACTION          : 33
TRUE                 : 53
WHILE                : 21 22
WITH                 : 17 18
error                : 

Nonterminals, with rules where they appear

array_declaration    : 7
array_index_access   : 8 41
array_value_list     : 27 28
boolean              : 52
condition_expression : 15 16 16 21 22 31
datatype             : 23 26 27
datavalue            : 28 29 38 39 40
do_while_statement   : 10
empty                : 14
expression           : 4 20 25 32 32 33 33 34 34 35 35 36 36 37 37 42 42 43 43 44 44 45 45 46 46 47 47
for_statement        : 11
identifier           : 24 25 26 27 30 59
if_statement         : 12
main_func            : 0
print_statement      : 13
statement            : 2 3
statement_list       : 1 2 15 16 16 17 18 21 22
variable_assignment  : 6 23
variable_declaration : 5 17 18
while_statement      : 9

Parsing method: LALR

state 0

    (0) S' -> . main_func
    (1) main_func -> . MAIN_FUNCTION EXECUTE COLON LBRACE statement_list RBRACE FUNCTION_END

    MAIN_FUNCTION   shift and go to state 2

    main_func                      shift and go to state 1

state 1

    (0) S' -> main_func .



state 2

    (1) main_func -> MAIN_FUNCTION . EXECUTE COLON LBRACE statement_list RBRACE FUNCTION_END

    EXECUTE         shift and go to state 3


state 3

    (1) main_func -> MAIN_FUNCTION EXECUTE . COLON LBRACE statement_list RBRACE FUNCTION_END

    COLON           shift and go to state 4


state 4

    (1) main_func -> MAIN_FUNCTION EXECUTE COLON . LBRACE statement_list RBRACE FUNCTION_END

    LBRACE          shift and go to state 5


state 5

    (1) main_func -> MAIN_FUNCTION EXECUTE COLON LBRACE . statement_list RBRACE FUNCTION_END
    (2) statement_list -> . statement statement_list
    (3) statement_list -> . statement
    (4) statement -> . expression
    (5) statement -> . variable_declaration
    (6) statement -> . variable_assignment
    (7) statement -> . array_declaration
    (8) statement -> . array_index_access
    (9) statement -> . while_statement
    (10) statement -> . do_while_statement
    (11) statement -> . for_statement
    (12) statement -> . if_statement
    (13) statement -> . print_statement
    (14) statement -> . empty
    (31) expression -> . condition_expression
    (32) expression -> . expression ADDITION expression
    (33) expression -> . expression SUBTRACTION expression
    (34) expression -> . expression MULTIPLICATION expression
    (35) expression -> . expression DIVISION expression
    (36) expression -> . expression EXPONENTIAL expression
    (37) expression -> . expression MODULUS expression
    (38) expression -> . datavalue INCREMENT
    (39) expression -> . datavalue DECREMENT
    (40) expression -> . datavalue
    (41) expression -> . array_index_access
    (23) variable_declaration -> . datatype variable_assignment
    (24) variable_assignment -> . identifier SEMICOLON
    (25) variable_assignment -> . identifier ASSIGNMENT expression SEMICOLON
    (26) array_declaration -> . datatype identifier LBRACKET INTEGER_VALUE RBRACKET SEMICOLON
    (27) array_declaration -> . datatype identifier LBRACKET INTEGER_VALUE RBRACKET ASSIGNMENT LBRACKET array_value_list RBRACKET SEMICOLON
    (30) array_index_access -> . identifier LBRACKET INTEGER_VALUE RBRACKET
    (22) while_statement -> . WHILE LPAREN condition_expression RPAREN EXECUTE COLON LBRACE statement_list RBRACE END_WHILE
    (21) do_while_statement -> . EXECUTE COLON LBRACE statement_list RBRACE WHILE LPAREN condition_expression RPAREN
    (17) for_statement -> . FOR variable_declaration WITH LIMIT INTEGER_VALUE ASCEND INTEGER_VALUE EXECUTE COLON LBRACE statement_list RBRACE END_FOR
    (18) for_statement -> . FOR variable_declaration WITH LIMIT INTEGER_VALUE DESCEND INTEGER_VALUE EXECUTE COLON LBRACE statement_list RBRACE END_FOR
    (15) if_statement -> . IF LPAREN condition_expression RPAREN EXECUTE COLON LBRACE statement_list RBRACE END_IF
    (16) if_statement -> . IF LPAREN condition_expression RPAREN EXECUTE COLON LBRACE statement_list RBRACE OTHERWISE IF LPAREN condition_expression RPAREN EXECUTE COLON LBRACE statement_list RBRACE END_IF
    (19) print_statement -> . PRINT LPAREN STRING_VALUE RPAREN SEMICOLON
    (20) print_statement -> . PRINT LPAREN STRING_VALUE ADDITION expression RPAREN SEMICOLON
    (61) empty -> .
    (42) condition_expression -> . expression EQUAL_TO expression
    (43) condition_expression -> . expression LESS_THAN expression
    (44) condition_expression -> . expression GREATER_THAN expression
    (45) condition_expression -> . expression LESS_THAN_OR_EQUAL_TO expression
    (46) condition_expression -> . expression GREATER_THAN_OR_EQUAL_TO expression
    (47) condition_expression -> . expression NOT_EQUAL_TO expression
    (55) datavalue -> . FLOAT_VALUE
    (56) datavalue -> . INTEGER_VALUE
    (57) datavalue -> . STRING_VALUE
    (58) datavalue -> . NULL_VALUE
    (59) datavalue -> . identifier
    (48) datatype -> . FLOAT
    (49) datatype -> . INTEGER
    (50) datatype -> . STRING
    (51) datatype -> . NULL
    (52) datatype -> . boolean
    (60) identifier -> . IDENTIFIER
    (53) boolean -> . TRUE
    (54) boolean -> . FALSE

  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for EXECUTE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for FLOAT_VALUE resolved as shift
  ! shift/reduce conflict for INTEGER_VALUE resolved as shift
  ! shift/reduce conflict for STRING_VALUE resolved as shift
  ! shift/reduce conflict for NULL_VALUE resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for NULL resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
    WHILE           shift and go to state 25
    EXECUTE         shift and go to state 6
    FOR             shift and go to state 26
    IF              shift and go to state 27
    PRINT           shift and go to state 28
    RBRACE          reduce using rule 61 (empty -> .)
    FLOAT_VALUE     shift and go to state 30
    INTEGER_VALUE   shift and go to state 24
    STRING_VALUE    shift and go to state 29
    NULL_VALUE      shift and go to state 31
    FLOAT           shift and go to state 32
    INTEGER         shift and go to state 33
    STRING          shift and go to state 34
    NULL            shift and go to state 35
    IDENTIFIER      shift and go to state 37
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39

  ! WHILE           [ reduce using rule 61 (empty -> .) ]
  ! EXECUTE         [ reduce using rule 61 (empty -> .) ]
  ! FOR             [ reduce using rule 61 (empty -> .) ]
  ! IF              [ reduce using rule 61 (empty -> .) ]
  ! PRINT           [ reduce using rule 61 (empty -> .) ]
  ! FLOAT_VALUE     [ reduce using rule 61 (empty -> .) ]
  ! INTEGER_VALUE   [ reduce using rule 61 (empty -> .) ]
  ! STRING_VALUE    [ reduce using rule 61 (empty -> .) ]
  ! NULL_VALUE      [ reduce using rule 61 (empty -> .) ]
  ! FLOAT           [ reduce using rule 61 (empty -> .) ]
  ! INTEGER         [ reduce using rule 61 (empty -> .) ]
  ! STRING          [ reduce using rule 61 (empty -> .) ]
  ! NULL            [ reduce using rule 61 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 61 (empty -> .) ]
  ! TRUE            [ reduce using rule 61 (empty -> .) ]
  ! FALSE           [ reduce using rule 61 (empty -> .) ]

    statement_list                 shift and go to state 7
    statement                      shift and go to state 8
    expression                     shift and go to state 9
    variable_declaration           shift and go to state 10
    variable_assignment            shift and go to state 11
    array_declaration              shift and go to state 12
    array_index_access             shift and go to state 13
    while_statement                shift and go to state 14
    do_while_statement             shift and go to state 15
    for_statement                  shift and go to state 16
    if_statement                   shift and go to state 17
    print_statement                shift and go to state 18
    empty                          shift and go to state 19
    condition_expression           shift and go to state 20
    datavalue                      shift and go to state 21
    datatype                       shift and go to state 22
    identifier                     shift and go to state 23
    boolean                        shift and go to state 36

state 6

    (21) do_while_statement -> EXECUTE . COLON LBRACE statement_list RBRACE WHILE LPAREN condition_expression RPAREN

    COLON           shift and go to state 40


state 7

    (1) main_func -> MAIN_FUNCTION EXECUTE COLON LBRACE statement_list . RBRACE FUNCTION_END

    RBRACE          shift and go to state 41


state 8

    (2) statement_list -> statement . statement_list
    (3) statement_list -> statement .
    (2) statement_list -> . statement statement_list
    (3) statement_list -> . statement
    (4) statement -> . expression
    (5) statement -> . variable_declaration
    (6) statement -> . variable_assignment
    (7) statement -> . array_declaration
    (8) statement -> . array_index_access
    (9) statement -> . while_statement
    (10) statement -> . do_while_statement
    (11) statement -> . for_statement
    (12) statement -> . if_statement
    (13) statement -> . print_statement
    (14) statement -> . empty
    (31) expression -> . condition_expression
    (32) expression -> . expression ADDITION expression
    (33) expression -> . expression SUBTRACTION expression
    (34) expression -> . expression MULTIPLICATION expression
    (35) expression -> . expression DIVISION expression
    (36) expression -> . expression EXPONENTIAL expression
    (37) expression -> . expression MODULUS expression
    (38) expression -> . datavalue INCREMENT
    (39) expression -> . datavalue DECREMENT
    (40) expression -> . datavalue
    (41) expression -> . array_index_access
    (23) variable_declaration -> . datatype variable_assignment
    (24) variable_assignment -> . identifier SEMICOLON
    (25) variable_assignment -> . identifier ASSIGNMENT expression SEMICOLON
    (26) array_declaration -> . datatype identifier LBRACKET INTEGER_VALUE RBRACKET SEMICOLON
    (27) array_declaration -> . datatype identifier LBRACKET INTEGER_VALUE RBRACKET ASSIGNMENT LBRACKET array_value_list RBRACKET SEMICOLON
    (30) array_index_access -> . identifier LBRACKET INTEGER_VALUE RBRACKET
    (22) while_statement -> . WHILE LPAREN condition_expression RPAREN EXECUTE COLON LBRACE statement_list RBRACE END_WHILE
    (21) do_while_statement -> . EXECUTE COLON LBRACE statement_list RBRACE WHILE LPAREN condition_expression RPAREN
    (17) for_statement -> . FOR variable_declaration WITH LIMIT INTEGER_VALUE ASCEND INTEGER_VALUE EXECUTE COLON LBRACE statement_list RBRACE END_FOR
    (18) for_statement -> . FOR variable_declaration WITH LIMIT INTEGER_VALUE DESCEND INTEGER_VALUE EXECUTE COLON LBRACE statement_list RBRACE END_FOR
    (15) if_statement -> . IF LPAREN condition_expression RPAREN EXECUTE COLON LBRACE statement_list RBRACE END_IF
    (16) if_statement -> . IF LPAREN condition_expression RPAREN EXECUTE COLON LBRACE statement_list RBRACE OTHERWISE IF LPAREN condition_expression RPAREN EXECUTE COLON LBRACE statement_list RBRACE END_IF
    (19) print_statement -> . PRINT LPAREN STRING_VALUE RPAREN SEMICOLON
    (20) print_statement -> . PRINT LPAREN STRING_VALUE ADDITION expression RPAREN SEMICOLON
    (61) empty -> .
    (42) condition_expression -> . expression EQUAL_TO expression
    (43) condition_expression -> . expression LESS_THAN expression
    (44) condition_expression -> . expression GREATER_THAN expression
    (45) condition_expression -> . expression LESS_THAN_OR_EQUAL_TO expression
    (46) condition_expression -> . expression GREATER_THAN_OR_EQUAL_TO expression
    (47) condition_expression -> . expression NOT_EQUAL_TO expression
    (55) datavalue -> . FLOAT_VALUE
    (56) datavalue -> . INTEGER_VALUE
    (57) datavalue -> . STRING_VALUE
    (58) datavalue -> . NULL_VALUE
    (59) datavalue -> . identifier
    (48) datatype -> . FLOAT
    (49) datatype -> . INTEGER
    (50) datatype -> . STRING
    (51) datatype -> . NULL
    (52) datatype -> . boolean
    (60) identifier -> . IDENTIFIER
    (53) boolean -> . TRUE
    (54) boolean -> . FALSE

  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for EXECUTE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! reduce/reduce conflict for RBRACE resolved using rule 3 (statement_list -> statement .)
  ! shift/reduce conflict for FLOAT_VALUE resolved as shift
  ! shift/reduce conflict for INTEGER_VALUE resolved as shift
  ! shift/reduce conflict for STRING_VALUE resolved as shift
  ! shift/reduce conflict for NULL_VALUE resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for NULL resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
    RBRACE          reduce using rule 3 (statement_list -> statement .)
    WHILE           shift and go to state 25
    EXECUTE         shift and go to state 6
    FOR             shift and go to state 26
    IF              shift and go to state 27
    PRINT           shift and go to state 28
    FLOAT_VALUE     shift and go to state 30
    INTEGER_VALUE   shift and go to state 24
    STRING_VALUE    shift and go to state 29
    NULL_VALUE      shift and go to state 31
    FLOAT           shift and go to state 32
    INTEGER         shift and go to state 33
    STRING          shift and go to state 34
    NULL            shift and go to state 35
    IDENTIFIER      shift and go to state 37
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39

  ! WHILE           [ reduce using rule 61 (empty -> .) ]
  ! EXECUTE         [ reduce using rule 61 (empty -> .) ]
  ! FOR             [ reduce using rule 61 (empty -> .) ]
  ! IF              [ reduce using rule 61 (empty -> .) ]
  ! PRINT           [ reduce using rule 61 (empty -> .) ]
  ! FLOAT_VALUE     [ reduce using rule 61 (empty -> .) ]
  ! INTEGER_VALUE   [ reduce using rule 61 (empty -> .) ]
  ! STRING_VALUE    [ reduce using rule 61 (empty -> .) ]
  ! NULL_VALUE      [ reduce using rule 61 (empty -> .) ]
  ! FLOAT           [ reduce using rule 61 (empty -> .) ]
  ! INTEGER         [ reduce using rule 61 (empty -> .) ]
  ! STRING          [ reduce using rule 61 (empty -> .) ]
  ! NULL            [ reduce using rule 61 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 61 (empty -> .) ]
  ! TRUE            [ reduce using rule 61 (empty -> .) ]
  ! FALSE           [ reduce using rule 61 (empty -> .) ]
  ! RBRACE          [ reduce using rule 61 (empty -> .) ]

    statement                      shift and go to state 8
    statement_list                 shift and go to state 42
    expression                     shift and go to state 9
    variable_declaration           shift and go to state 10
    variable_assignment            shift and go to state 11
    array_declaration              shift and go to state 12
    array_index_access             shift and go to state 13
    while_statement                shift and go to state 14
    do_while_statement             shift and go to state 15
    for_statement                  shift and go to state 16
    if_statement                   shift and go to state 17
    print_statement                shift and go to state 18
    empty                          shift and go to state 19
    condition_expression           shift and go to state 20
    datavalue                      shift and go to state 21
    datatype                       shift and go to state 22
    identifier                     shift and go to state 23
    boolean                        shift and go to state 36

state 9

    (4) statement -> expression .
    (32) expression -> expression . ADDITION expression
    (33) expression -> expression . SUBTRACTION expression
    (34) expression -> expression . MULTIPLICATION expression
    (35) expression -> expression . DIVISION expression
    (36) expression -> expression . EXPONENTIAL expression
    (37) expression -> expression . MODULUS expression
    (42) condition_expression -> expression . EQUAL_TO expression
    (43) condition_expression -> expression . LESS_THAN expression
    (44) condition_expression -> expression . GREATER_THAN expression
    (45) condition_expression -> expression . LESS_THAN_OR_EQUAL_TO expression
    (46) condition_expression -> expression . GREATER_THAN_OR_EQUAL_TO expression
    (47) condition_expression -> expression . NOT_EQUAL_TO expression

    WHILE           reduce using rule 4 (statement -> expression .)
    EXECUTE         reduce using rule 4 (statement -> expression .)
    FOR             reduce using rule 4 (statement -> expression .)
    IF              reduce using rule 4 (statement -> expression .)
    PRINT           reduce using rule 4 (statement -> expression .)
    FLOAT_VALUE     reduce using rule 4 (statement -> expression .)
    INTEGER_VALUE   reduce using rule 4 (statement -> expression .)
    STRING_VALUE    reduce using rule 4 (statement -> expression .)
    NULL_VALUE      reduce using rule 4 (statement -> expression .)
    FLOAT           reduce using rule 4 (statement -> expression .)
    INTEGER         reduce using rule 4 (statement -> expression .)
    STRING          reduce using rule 4 (statement -> expression .)
    NULL            reduce using rule 4 (statement -> expression .)
    IDENTIFIER      reduce using rule 4 (statement -> expression .)
    TRUE            reduce using rule 4 (statement -> expression .)
    FALSE           reduce using rule 4 (statement -> expression .)
    RBRACE          reduce using rule 4 (statement -> expression .)
    ADDITION        shift and go to state 43
    SUBTRACTION     shift and go to state 44
    MULTIPLICATION  shift and go to state 45
    DIVISION        shift and go to state 46
    EXPONENTIAL     shift and go to state 47
    MODULUS         shift and go to state 48
    EQUAL_TO        shift and go to state 49
    LESS_THAN       shift and go to state 50
    GREATER_THAN    shift and go to state 51
    LESS_THAN_OR_EQUAL_TO shift and go to state 52
    GREATER_THAN_OR_EQUAL_TO shift and go to state 53
    NOT_EQUAL_TO    shift and go to state 54


state 10

    (5) statement -> variable_declaration .

    WHILE           reduce using rule 5 (statement -> variable_declaration .)
    EXECUTE         reduce using rule 5 (statement -> variable_declaration .)
    FOR             reduce using rule 5 (statement -> variable_declaration .)
    IF              reduce using rule 5 (statement -> variable_declaration .)
    PRINT           reduce using rule 5 (statement -> variable_declaration .)
    FLOAT_VALUE     reduce using rule 5 (statement -> variable_declaration .)
    INTEGER_VALUE   reduce using rule 5 (statement -> variable_declaration .)
    STRING_VALUE    reduce using rule 5 (statement -> variable_declaration .)
    NULL_VALUE      reduce using rule 5 (statement -> variable_declaration .)
    FLOAT           reduce using rule 5 (statement -> variable_declaration .)
    INTEGER         reduce using rule 5 (statement -> variable_declaration .)
    STRING          reduce using rule 5 (statement -> variable_declaration .)
    NULL            reduce using rule 5 (statement -> variable_declaration .)
    IDENTIFIER      reduce using rule 5 (statement -> variable_declaration .)
    TRUE            reduce using rule 5 (statement -> variable_declaration .)
    FALSE           reduce using rule 5 (statement -> variable_declaration .)
    RBRACE          reduce using rule 5 (statement -> variable_declaration .)


state 11

    (6) statement -> variable_assignment .

    WHILE           reduce using rule 6 (statement -> variable_assignment .)
    EXECUTE         reduce using rule 6 (statement -> variable_assignment .)
    FOR             reduce using rule 6 (statement -> variable_assignment .)
    IF              reduce using rule 6 (statement -> variable_assignment .)
    PRINT           reduce using rule 6 (statement -> variable_assignment .)
    FLOAT_VALUE     reduce using rule 6 (statement -> variable_assignment .)
    INTEGER_VALUE   reduce using rule 6 (statement -> variable_assignment .)
    STRING_VALUE    reduce using rule 6 (statement -> variable_assignment .)
    NULL_VALUE      reduce using rule 6 (statement -> variable_assignment .)
    FLOAT           reduce using rule 6 (statement -> variable_assignment .)
    INTEGER         reduce using rule 6 (statement -> variable_assignment .)
    STRING          reduce using rule 6 (statement -> variable_assignment .)
    NULL            reduce using rule 6 (statement -> variable_assignment .)
    IDENTIFIER      reduce using rule 6 (statement -> variable_assignment .)
    TRUE            reduce using rule 6 (statement -> variable_assignment .)
    FALSE           reduce using rule 6 (statement -> variable_assignment .)
    RBRACE          reduce using rule 6 (statement -> variable_assignment .)


state 12

    (7) statement -> array_declaration .

    WHILE           reduce using rule 7 (statement -> array_declaration .)
    EXECUTE         reduce using rule 7 (statement -> array_declaration .)
    FOR             reduce using rule 7 (statement -> array_declaration .)
    IF              reduce using rule 7 (statement -> array_declaration .)
    PRINT           reduce using rule 7 (statement -> array_declaration .)
    FLOAT_VALUE     reduce using rule 7 (statement -> array_declaration .)
    INTEGER_VALUE   reduce using rule 7 (statement -> array_declaration .)
    STRING_VALUE    reduce using rule 7 (statement -> array_declaration .)
    NULL_VALUE      reduce using rule 7 (statement -> array_declaration .)
    FLOAT           reduce using rule 7 (statement -> array_declaration .)
    INTEGER         reduce using rule 7 (statement -> array_declaration .)
    STRING          reduce using rule 7 (statement -> array_declaration .)
    NULL            reduce using rule 7 (statement -> array_declaration .)
    IDENTIFIER      reduce using rule 7 (statement -> array_declaration .)
    TRUE            reduce using rule 7 (statement -> array_declaration .)
    FALSE           reduce using rule 7 (statement -> array_declaration .)
    RBRACE          reduce using rule 7 (statement -> array_declaration .)


state 13

    (8) statement -> array_index_access .
    (41) expression -> array_index_access .

  ! reduce/reduce conflict for WHILE resolved using rule 8 (statement -> array_index_access .)
  ! reduce/reduce conflict for EXECUTE resolved using rule 8 (statement -> array_index_access .)
  ! reduce/reduce conflict for FOR resolved using rule 8 (statement -> array_index_access .)
  ! reduce/reduce conflict for IF resolved using rule 8 (statement -> array_index_access .)
  ! reduce/reduce conflict for PRINT resolved using rule 8 (statement -> array_index_access .)
  ! reduce/reduce conflict for FLOAT_VALUE resolved using rule 8 (statement -> array_index_access .)
  ! reduce/reduce conflict for INTEGER_VALUE resolved using rule 8 (statement -> array_index_access .)
  ! reduce/reduce conflict for STRING_VALUE resolved using rule 8 (statement -> array_index_access .)
  ! reduce/reduce conflict for NULL_VALUE resolved using rule 8 (statement -> array_index_access .)
  ! reduce/reduce conflict for FLOAT resolved using rule 8 (statement -> array_index_access .)
  ! reduce/reduce conflict for INTEGER resolved using rule 8 (statement -> array_index_access .)
  ! reduce/reduce conflict for STRING resolved using rule 8 (statement -> array_index_access .)
  ! reduce/reduce conflict for NULL resolved using rule 8 (statement -> array_index_access .)
  ! reduce/reduce conflict for IDENTIFIER resolved using rule 8 (statement -> array_index_access .)
  ! reduce/reduce conflict for TRUE resolved using rule 8 (statement -> array_index_access .)
  ! reduce/reduce conflict for FALSE resolved using rule 8 (statement -> array_index_access .)
  ! reduce/reduce conflict for RBRACE resolved using rule 8 (statement -> array_index_access .)
    WHILE           reduce using rule 8 (statement -> array_index_access .)
    EXECUTE         reduce using rule 8 (statement -> array_index_access .)
    FOR             reduce using rule 8 (statement -> array_index_access .)
    IF              reduce using rule 8 (statement -> array_index_access .)
    PRINT           reduce using rule 8 (statement -> array_index_access .)
    FLOAT_VALUE     reduce using rule 8 (statement -> array_index_access .)
    INTEGER_VALUE   reduce using rule 8 (statement -> array_index_access .)
    STRING_VALUE    reduce using rule 8 (statement -> array_index_access .)
    NULL_VALUE      reduce using rule 8 (statement -> array_index_access .)
    FLOAT           reduce using rule 8 (statement -> array_index_access .)
    INTEGER         reduce using rule 8 (statement -> array_index_access .)
    STRING          reduce using rule 8 (statement -> array_index_access .)
    NULL            reduce using rule 8 (statement -> array_index_access .)
    IDENTIFIER      reduce using rule 8 (statement -> array_index_access .)
    TRUE            reduce using rule 8 (statement -> array_index_access .)
    FALSE           reduce using rule 8 (statement -> array_index_access .)
    RBRACE          reduce using rule 8 (statement -> array_index_access .)
    ADDITION        reduce using rule 41 (expression -> array_index_access .)
    SUBTRACTION     reduce using rule 41 (expression -> array_index_access .)
    MULTIPLICATION  reduce using rule 41 (expression -> array_index_access .)
    DIVISION        reduce using rule 41 (expression -> array_index_access .)
    EXPONENTIAL     reduce using rule 41 (expression -> array_index_access .)
    MODULUS         reduce using rule 41 (expression -> array_index_access .)
    EQUAL_TO        reduce using rule 41 (expression -> array_index_access .)
    LESS_THAN       reduce using rule 41 (expression -> array_index_access .)
    GREATER_THAN    reduce using rule 41 (expression -> array_index_access .)
    LESS_THAN_OR_EQUAL_TO reduce using rule 41 (expression -> array_index_access .)
    GREATER_THAN_OR_EQUAL_TO reduce using rule 41 (expression -> array_index_access .)
    NOT_EQUAL_TO    reduce using rule 41 (expression -> array_index_access .)

  ! WHILE           [ reduce using rule 41 (expression -> array_index_access .) ]
  ! EXECUTE         [ reduce using rule 41 (expression -> array_index_access .) ]
  ! FOR             [ reduce using rule 41 (expression -> array_index_access .) ]
  ! IF              [ reduce using rule 41 (expression -> array_index_access .) ]
  ! PRINT           [ reduce using rule 41 (expression -> array_index_access .) ]
  ! FLOAT_VALUE     [ reduce using rule 41 (expression -> array_index_access .) ]
  ! INTEGER_VALUE   [ reduce using rule 41 (expression -> array_index_access .) ]
  ! STRING_VALUE    [ reduce using rule 41 (expression -> array_index_access .) ]
  ! NULL_VALUE      [ reduce using rule 41 (expression -> array_index_access .) ]
  ! FLOAT           [ reduce using rule 41 (expression -> array_index_access .) ]
  ! INTEGER         [ reduce using rule 41 (expression -> array_index_access .) ]
  ! STRING          [ reduce using rule 41 (expression -> array_index_access .) ]
  ! NULL            [ reduce using rule 41 (expression -> array_index_access .) ]
  ! IDENTIFIER      [ reduce using rule 41 (expression -> array_index_access .) ]
  ! TRUE            [ reduce using rule 41 (expression -> array_index_access .) ]
  ! FALSE           [ reduce using rule 41 (expression -> array_index_access .) ]
  ! RBRACE          [ reduce using rule 41 (expression -> array_index_access .) ]


state 14

    (9) statement -> while_statement .
